@@ -29,6 +29,7 @@ New Features:
   * Remove ability to automatically upgrade from versions prior to 0.8.0.
   * Remove unused/obsolete Javascript and namespace the remaining code.
   * Organize uploaded images by virtual wiki on the file system.
+  * Add several indexes to the database to improve query performance.
   * Upgrade to Spring Framework 3.0.3.RELEASE.
   * Upgrade to Spring Security 3.0.3.RELEASE.
   * Upgrade to Ehcache 2.1.0.
